--- a/components/Onboard/intend/intend.module.scss
+++ b/components/Onboard/intend/intend.module.scss
@@ -43,12 +43,11 @@
 
         }
 
-        .button:hover {
+        .button:hover,.button_selected {
             background-color: #6C4DD6;
             color: #fff;
-
-
         }
+
     }
 
     
